--- a/x-clone/package.json
+++ b/x-clone/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "classname": "^0.0.0",
     "dayjs": "^1.11.13",
     "next": "14.2.5",
