--- a/x-clone/package.json
+++ b/x-clone/package.json
@@ -6,23 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
     "@faker-js/faker": "^8.4.1",
     "classname": "^0.0.0",
     "dayjs": "^1.11.13",
+    "graphql": "^16.9.0",
     "next": "14.2.5",
+    "ra-data-graphql": "^5.1.3",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@mswjs/http-middleware": "^0.10.1",
     "@types/classnames": "^2.3.1",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "cors": "^2.8.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
+    "express": "^4.19.2",
+    "msw": "^2.4.1",
     "typescript": "^5"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
