--- a/x-clone/package.json
+++ b/x-clone/package.json
@@ -10,11 +10,13 @@
     "mock": "npx tsx watch ./src/mocks/http.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@faker-js/faker": "^8.4.1",
     "classname": "^0.0.0",
     "dayjs": "^1.11.13",
     "graphql": "^16.9.0",
     "next": "14.2.5",
+    "next-auth": "^5.0.0-beta.20",
     "ra-data-graphql": "^5.1.3",
     "react": "^18",
     "react-dom": "^18"
