--- a/x-clone/package.json
+++ b/x-clone/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@faker-js/faker": "^8.4.1",
+    "@tanstack/react-query": "^5.53.2",
     "classname": "^0.0.0",
     "dayjs": "^1.11.13",
     "graphql": "^16.9.0",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@mswjs/http-middleware": "^0.10.1",
+    "@tanstack/react-query-devtools": "^5.53.2",
     "@types/classnames": "^2.3.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
